--- a/requirements.lock.txt
+++ b/requirements.lock.txt
@@ -1,10 +1,12 @@
 backports.tarfile==1.2.0
 fastapi==0.115.6
+greenlet==3.1.1
 importlib-metadata==8.0.0
 importlib-resources==6.4.0
 jaraco.collections==5.1.0
 packaging==24.1
 platformdirs==4.2.2
+sqlmodel==0.0.22
 tomli==2.0.1
 uvicorn==0.32.1
 annotated-types==0.7.0 # Installed as dependency for pydantic
@@ -18,10 +20,11 @@ jaraco.context==5.3.0 # Installed as dependency for jaraco.text
 jaraco.functools==4.0.1 # Installed as dependency for jaraco.text
 jaraco.text==3.12.1 # Installed as dependency for jaraco.collections
 more-itertools==10.3.0 # Installed as dependency for inflect, jaraco.functools, jaraco.text
-pydantic==2.10.3 # Installed as dependency for fastapi
+pydantic==2.10.3 # Installed as dependency for fastapi, sqlmodel
 pydantic-core==2.27.1 # Installed as dependency for pydantic
 sniffio==1.3.1 # Installed as dependency for anyio
+sqlalchemy==2.0.36 # Installed as dependency for sqlmodel
 starlette==0.41.2 # Installed as dependency for fastapi
 typeguard==4.3.0 # Installed as dependency for inflect
-typing-extensions==4.12.2 # Installed as dependency for fastapi, pydantic, pydantic-core, typeguard
+typing-extensions==4.12.2 # Installed as dependency for fastapi, pydantic, pydantic-core, sqlalchemy, typeguard
 zipp==3.19.2 # Installed as dependency for importlib-metadata
